testsuite/tests/safeHaskell/safeInfered/UnsafeInfered01.stderr
UnsafeInfered01.hs:5:1: error:
    UnsafeInfered01_A: Can't be safely imported!
    The module itself isn't safe.
